fixed openai key

--- a/applepay_rag_chatbot.ipynb
+++ b/applepay_rag_chatbot.ipynb
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "2b8f154a",
       "metadata": {},
       "outputs": [
@@ -453,9 +453,6 @@
         "#LLM based chunker------------------------------------------------------------------\n",
         "from openai import OpenAI\n",
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"]=\"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\"\n",
-        "\n",
-        "\n",
         "def llm_chunk_text(text, chunk_size=1000, model=\"gpt-4o-mini\", api_key=None):\n",
         "    \"\"\"\n",
         "    Uses an LLM to find semantically coherent chunk boundaries around a target chunk size.\n",
@@ -689,7 +686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "2ea95e2d",
       "metadata": {},
       "outputs": [],
@@ -738,8 +735,7 @@
         "\n",
         "\n",
         "def answer(query: str, contexts: List[Dict]) -> Dict:\n",
-        "    #client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
-        "    client = OpenAI(api_key=\"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\")\n",
+        "    client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
         "    sys = \"You are a customer support assistant for Apple Pay. Answer strictly using the provided context and cite sources.\"\n",
         "    citations_md = \"\\n\\n\".join([f\"[{i+1}] {c['meta']['title'] or c['meta']['url']} — {c['meta']['url']}\" for i, c in enumerate(contexts)])\n",
         "    context_text = \"\\n\\n---\\n\\n\".join([c[\"text\"] for c in contexts])\n",
