--- a/applepay_rag_chatbot.ipynb
+++ b/applepay_rag_chatbot.ipynb
@@ -5,31 +5,15 @@
       "id": "17b64aa2",
       "metadata": {},
       "source": [
-        "# ApplePay RAG Chatbot — Notebook Scaffold\n",
-        "\n",
-        "This notebook is a scaffold for the ApplePay customer-support RAG chatbot. Fill the cells with ingestion, chunking, embeddings, retrieval, generation, citations, UI, and ablation steps.\n",
-        "\n",
-        "> In environments without internet/API keys, run ingestion elsewhere and import the corpus here."
+        "# ApplePay RAG Chatbot\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "38c65c75",
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'bs4'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mre\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpathlib\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbs4\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BeautifulSoup\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01murllib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m urljoin\n\u001b[0;32m      8\u001b[0m APPLEPAY_ROOTS \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://www.apple.com/apple-pay/\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://support.apple.com/apple-pay\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;66;03m#\"https://horizonbank.com.au/help/faqs/apple-pay-faqs/\" blocked\u001b[39;00m\n\u001b[0;32m     16\u001b[0m ]\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'bs4'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#\n",
         "\n",
@@ -777,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "481c32ff",
       "metadata": {},
       "outputs": [
@@ -844,7 +828,6 @@
       "source": [
         "\n",
         "import json, time, statistics\n",
-        "#from rag_pipeline import retrieve, answer\n",
         "\n",
         "def run_eval(top_k=6):\n",
         "    with open(\"backend/evaluation/queries.json\",\"r\") as f:\n",
